possibly fix OIDC for non-keycloak systems, update swagger
